# 01-taobao

./: .gitignore  .project-machine-config.json  README.md  firmware_package.py  project_runtime.py
.claude/: settings.local.json
00-requirement/: 00-项目目录说明.md  01-ESP32-C3-固件需求与架构.md  02-网页架构.md  03-App实现与架构.md  04-ESP32-C3-SuperMini-传感器接线说明.md  04-通信协议说明.md  05-设备OTA升级方案.md  06-ESP32-C3-模式状态机与模式说明.md
01-esp32-s3/02-project/: README.md
01-esp32-s3/03-project/: main.py
01-firmware/: 01-build_firmware.py  02-flash_firmware.py  03-build-report.md  04-ESP32-C3-SuperMini-传感器接线说明.md
01-firmware/00-main-c3-firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
01-firmware/00-main-c3-firmware/main/: CMakeLists.txt  app_main.c
01-firmware/00-main-c3-firmware/main/app/: console_service.c  device_profile.c  ota_service.c  provisioning_service.c  remote_config_service.c  status_led.c  telemetry_app.c
01-firmware/00-main-c3-firmware/main/dht11/: dht11_sensor.c
01-firmware/00-main-c3-firmware/main/include/: analog_sensor.h  app_config.h  bh1750_sensor.h  bmp180_sensor.h  bmp280_sensor.h  console_service.h  device_profile.h  dht11_sensor.h  ds18b20_sensor.h  ina226_sensor.h  max17043_sensor.h  network_service.h  oled_ssd1306.h  ota_service.h  provisioning_service.h  remote_config_service.h  sensor_bus.h  shtc3_sensor.h  status_led.h  telemetry_app.h
01-firmware/00-main-c3-firmware/main/network/: network_service.c
01-firmware/00-main-c3-firmware/main/oled/: oled_ssd1306.c
01-firmware/00-main-c3-firmware/main/sensors/: analog_sensor.c  bh1750_sensor.c  bmp180_sensor.c  bmp280_sensor.c  ds18b20_sensor.c  ina226_sensor.c  max17043_sensor.c  sensor_bus.c  shtc3_sensor.c
01-firmware/01-document/: 04-固件升级方案.md
01-firmware/98-screen-wifi-scan-test/: CMakeLists.txt  sdkconfig.defaults
02-app/: 启动上位机.bat  启动上位机.py
02-app/01-c3-monitor/: README.md  main.py  requirements.txt  启动电脑端监控APP.bat
02-esp32/01-document/: board-info.md
02-esp32/02-solusion/: README.md
02-pr/idf-3sensor-pages-demo/: CMakeLists.txt  README.md
02-pr/idf-oled-demo/: CMakeLists.txt
02-pr/idf-pressure-demo/: CMakeLists.txt
03-esp32-c3/03-project/02-wifi-mqtt-forward-demo/main/: CMakeLists.txt  app_main.c
03-esp32-c3/03-project/02-wifi-mqtt-forward-demo/main/app/: console_service.c  device_profile.c  telemetry_app.c
03-esp32-c3/03-project/02-wifi-mqtt-forward-demo/main/include/: app_config.h  console_service.h  device_profile.h  network_service.h
03-esp32-c3/03-project/02-wifi-mqtt-forward-demo/main/network/: network_service.c
03-esp32-c3/03-project/02-wifi-mqtt-forward-demo/main/oled/: oled_ssd1306.c
03-exp32/: CMakeLists.txt  README.md
03-server/: 01-打开网页.bat  01-打开网页.py  02-ssh登录服务器.py  03-服务器内存分析.py  04-同步到服务器.py  05-从服务器同步到本地.py  06-完成提醒.py  SYNC-CONVENTION.md  公网部署报告.md  内存分析报告.md
03-server/01-net-display-server/: README.md  (+4 more)
05-andriod/: .gitignore  README.md  settings.gradle.kts
05-script/: 01-open-public-dashboard.bat  02-start-c3-monitor.bat
07-document/: 硬件接线说明.md  项目规划.md
08-seission/: 2026-03-19-net-display-progress.md
2-MPY-downloard tool/: flash_download_tool.html
(+173 files in other folders)
