idf_component_register(
    SRCS
        "app_main.c"
        "app/telemetry_app.c"
        "app/device_profile.c"
        "app/console_service.c"
        "dht11/dht11_sensor.c"
        "sensors/sensor_bus.c"
        "sensors/ds18b20_sensor.c"
        "sensors/bh1750_sensor.c"
        "sensors/bmp280_sensor.c"
        "sensors/analog_sensor.c"
        "network/network_service.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        json
        driver
        esp_event
        esp_netif
        esp_wifi
        mqtt
        nvs_flash
        vfs
        esp_adc
)
