idf_component_register(
    SRCS
        "app_main.c"
        "app/telemetry_app.c"
        "app/device_profile.c"
        "app/ota_service.c"
        "app/remote_config_service.c"
        "app/console_service.c"
        "app/status_led.c"
        "oled/oled_ssd1306.c"
        "dht11/dht11_sensor.c"
        "sensors/sensor_bus.c"
        "sensors/ds18b20_sensor.c"
        "sensors/bh1750_sensor.c"
        "sensors/bmp180_sensor.c"
        "sensors/shtc3_sensor.c"
        "sensors/max17043_sensor.c"
        "sensors/ina226_sensor.c"
        "sensors/analog_sensor.c"
        "network/network_service.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        json
        driver
        esp_event
        esp_netif
        esp_wifi
        mqtt
        nvs_flash
        vfs
        esp_adc
        esp_http_client
        app_update
)
